[story-863883367] Optimize package build script and remove unnecessary dependency (merge request !78)